# SHA-256

sha256/: CMakeLists.txt  Makefile  readme.txt.txt
sha256/libs/cache/: cache.c
sha256/libs/comunication/: comunication.c
sha256/libs/pending_list/: pending_list.c
sha256/libs/sha256_file/: sha256_file.c
sha256/src/: client.c  server.c
